Fix mobile app images on mobile devices

--- a/timetable/static/timetable/css/user.css
+++ b/timetable/static/timetable/css/user.css
@@ -198,14 +198,21 @@ body {
 
 
 	.mobileApps-one {
+	    max-width: 100%;
 		cursor: pointer;
 		color: #0060c7;
 	}
 
 		.mobileApps-model {
-			display: inline-block;
+		    max-width: 100%;
+			display: block;
 			margin-top: 20px;
 			font-size: 120%;
+		}
+
+		.mobileApps-img {
+		    max-width: 100%;
+			display: block;
 		}
 
 .mobileIOS {
